BGE fix [#35563] Object colour setting for objects and fonts not using colour management like materials