source/gameengine/Ketsji/KX_FontObject.cpp
@@ -76,12 +76,14 @@ static std::vector<STR_String> split_string(STR_String str)
 KX_FontObject::KX_FontObject(void* sgReplicationInfo,
                              SG_Callbacks callbacks,
                              RAS_IRenderTools* rendertools,
-                             Object *ob):
+                             Object *ob,
+                             bool do_color_management):
 	KX_GameObject(sgReplicationInfo, callbacks),
 	m_object(ob),
 	m_dpi(72),
 	m_resolution(1.f),
-	m_rendertools(rendertools)
+	m_rendertools(rendertools),
+	m_do_color_management(do_color_management)
 {
 	Curve *text = static_cast<Curve *> (ob->data);
 	m_text = split_string(text->str);
@@ -174,6 +176,22 @@ void KX_FontObject::DrawText()
 	/* update the animated color */
 	this->GetObjectColor().getValue(m_color);
 
+	/* Font Objects don't use the glsl shader, this color management code is copied from gpu_shader_material.glsl */
+	float color[4];
+	for (int i = 0; i < 3; i++) {
+		if (m_do_color_management) {
+			float c = m_color[i];
+			if(c < 0.0031308)
+				c = (c < 0.0) ? 0.0: c * 12.92;
+			else
+				c = 1.055 * pow(c, 1.0/2.4) - 0.055;
+			color[i] = c;
+		}
+		else
+			color[i] = m_color[i];
+	}
+	color[3] = m_color[3];
+
 	/* HARDCODED MULTIPLICATION FACTOR - this will affect the render resolution directly */
 	const float RES = BGE_FONT_RES * m_resolution;
 
@@ -201,7 +219,7 @@ void KX_FontObject::DrawText()
 			mat[13] -= spacing[1];
 			mat[14] -= spacing[2];
 		}
-		m_rendertools->RenderText3D(m_fontid, m_text[i], int(size), m_dpi, m_color, mat, aspect);
+		m_rendertools->RenderText3D(m_fontid, m_text[i], int(size), m_dpi, color, mat, aspect);
 	}
 }
 
